--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.5",
   "description": "Plugin for ProseMirror emulating A4 pages",
   "main": "dist/bundle.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
@@ -32,20 +33,14 @@
     "color": "^3.1.2"
   },
   "peerDependencies": {
-    "prosemirror-state": "^1.3.3",
-    "prosemirror-tables": "^0.9.1",
-    "prosemirror-transform": "^1.2.6",
-    "prosemirror-view": "^1.14.13",
     "prosemirror-model": "^1.10.0",
-    "prosemirror-utils": "^0.9.6"
-  },
-  "devDependencies": {
     "prosemirror-state": "^1.3.3",
     "prosemirror-tables": "^0.9.1",
     "prosemirror-transform": "^1.2.6",
     "prosemirror-utils": "^0.9.6",
-    "prosemirror-model": "^1.10.0",
-    "prosemirror-view": "^1.14.13",
+    "prosemirror-view": "^1.14.13"
+  },
+  "devDependencies": {
     "@rollup/plugin-node-resolve": "^8.1.0",
     "@types/prosemirror-model": "^1.7.2",
     "@types/prosemirror-state": "^1.2.4",
@@ -54,9 +49,15 @@
     "husky": "^3.0.9",
     "lint-staged": "^10.2.11",
     "pretty-quick": "^2.0.0",
+    "prosemirror-model": "^1.10.0",
+    "prosemirror-state": "^1.3.3",
+    "prosemirror-tables": "^0.9.1",
+    "prosemirror-transform": "^1.2.6",
+    "prosemirror-utils": "^0.9.6",
+    "prosemirror-view": "^1.14.13",
     "rimraf": "^3.0.2",
     "rollup": "^2.18.0",
-    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.29.0",
     "tslib": "^2.0.0",
     "typescript": "^3.9.5"
   }
